<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivitty">

    <ImageView
        android:id="@+id/cart2"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cart2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

    <TextView
        android:id="@+id/Onemore"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:text="@string/one_more_step"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/cart2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/payBtn"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/round_bg"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/round_red_bg"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/payBtn" />

    <EditText
        android:id="@+id/date"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Enter Date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/time"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Enter Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="comment"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart2" />

    <EditText
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="Enter Address"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />
</androidx.constraintlayout.widget.ConstraintLayout>